# giftbook

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/giftbook/: __main__.py  api.py  app.py  auth.py  config.py  db.py  executor.py  gunicorn.py  stores.py
backend/giftbook/controllers/: users.py
backend/giftbook/services/: email.py
backend/giftbook/tables/: users.py
backend/giftbook/utils/: generators.py
frontend/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.tsx
frontend/src/components/App/: App.tsx
frontend/src/components/Home/: Home.module.scss  Home.tsx
