[tool.poetry]
name = "giftbook"
version = "0.1.0"
description = "A Python-based web API for booking gifts and presents"
authors = ["yujinio <root@yujin.io>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["python", "gifts", "presents", "giftbook", "gift-book", "wishlist"]
repository = "https://github.com/GiftbookApp/giftbook"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
orjson = "^3.10.1"
gunicorn = "^22.0.0"
redis = "^5.0.4"
uvicorn = "^0.29.0"
piccolo = {version = "^1.5.0", extras = ["all"]}
uvloop = "^0.19.0"
environs = "^11.0.0"
litestar = {version = "^2.8.2", extras = ["piccolo"]}
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
  "tests.py",
  "test_*.py",
  "*_test.py",
]

# ==== black ====
[tool.black]
include = '\.pyi?$'
line-length = 119
target-version = ['py311']

# ==== isort ====
[tool.isort]
known_first_party = ["giftbook"]
line_length = 119
multi_line_output = 3
profile = "black"
skip_glob = ["**/migrations/*.py"]

# ==== mypy ====
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
implicit_reexport = false
python_version = "3.12"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
