[tool.poetry]
name = "giftbook"
version = "0.1.0"
description = "A Python-based web API for booking gifts and presents"
authors = ["yujinio <root@yujin.io>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["python", "gifts", "presents", "giftbook", "gift-book", "wishlist"]
repository = "https://github.com/GiftbookApp/giftbook"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
orjson = "^3.10.1"
redis = "^5.0.4"
piccolo = {version = "^1.5.0", extras = ["all"]}
environs = "^11.0.0"
litestar = {version = "^2.8.3", extras = ["piccolo"]}
argon2-cffi = "^23.1.0"
litestar-granian = "^0.3.0"
granian = {version = "^1.3.1", extras = ["reload"]}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
  "tests.py",
  "test_*.py",
  "*_test.py",
]

# ==== ruff ====
[tool.ruff]
fix = true
include = ['.pyi']
line-length = 119
show-fixes = true
target-version = "py312"

[tool.ruff.isort]
known-first-party = ["giftbook"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 119
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# ==== mypy ====
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
implicit_reexport = false
python_version = "3.12"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
